tests/NormalTests/paczka1/small_fuzzy/82796045.err
Error in line 1: Jxt S815 45,0
Error in line 6: IJIvvg S721 46,1
Error in line 8: IJIvvg S815 101,80
Error in line 9: 4vC4v8Vp9jz S844 30,2
Error in line 10: 4vC4v8Vp9jz S721 85,0
Error in line 7: IJIvvg S815 30,5
Error in line 3: jkfNQcF1UjG A183 53,5
